screens/urbania-article/src/urbania-article.module.scss
// stylelint-disable max-nesting-depth

@import '~@micromag/core/scss/variables';
@import '~@micromag/core/scss/placeholders';

$color-video-title: #fff;
$color-video-outline: #222;

$color-urbania-background: #ff0;
$color-urbania-text: #222;

$color-quatre95-background: #fff;
$color-quatre95-text: #5e79ff;

$color-dehors-background: #00c693;
$color-dehors-text: #ffeada;

$color-universities-background: #fff;
$color-universities-text: #f33;

.container {
    @extend %screen;

    &.isPlaceholder {
        .articleContent {
            width: 80%;
            height: 35%;
            margin: 5px auto;
            background-color: transparent;
            background-color: $gray-900;
        }

        .visual {
            position: relative;
            flex-grow: 1;
            width: 80%;
            height: 50%;
            margin: 5px auto;
        }
    }

    &.isVideo {
        .visual {
            @extend %fullscreen;
        }

        .articleContent {
            position: relative;
            flex-grow: 1;
            justify-content: flex-end;
            margin-bottom: 70px;
            background-color: transparent;

            .title {
                color: $color-video-title;
                text-shadow: 0 0 6px $color-video-outline;
            }

            .description {
                color: $color-video-title;
                text-shadow: 0 0 6px $color-video-outline;
            }

            .sponsors {
                margin-top: 0;
            }
        }

        .emptyContainer {
            top: 0;
            height: 100%;
            padding-bottom: 0;
            transform: none;
        }

        .callToAction {
            position: absolute;
        }
    }
}

.placeholder {
    background-color: $gray-600;
}

.emptyContainer {
    width: 100%;
    height: 0;
    margin-bottom: 10px;
    padding-bottom: 20%;
    transform: translateY(0);

    &.small {
        padding-bottom: 15%;
    }
}

.empty {
    @extend %empty;
    @extend %fullscreen;

    margin: 0;
}

.background {
    z-index: 0;
}

.content {
    @extend %fullscreen;
    display: flex;
    z-index: 1;
    flex-direction: column;
    width: 100%;
    height: 100%;
}

.video {
    @extend %fullscreen;
}

.articleContent {
    display: flex;
    z-index: 3;
    flex-direction: column;
    align-items: center;
    justify-content: center;
    width: 100%;
    color: $color-urbania-text;
    text-align: center;

    .title,
    .overTitle,
    .authors,
    .description {
        padding: 3px 20px;
    }

    .overTitle {
        margin-bottom: 10px;
        padding: 30px 0 2px;
        border-bottom: 1px solid currentColor;
        font-family: 'Agrandir Tight';
        font-size: 10px;
        font-weight: 700;
        // letter-spacing: 0.1em;
        text-transform: uppercase;
    }

    .title {
        font-family: 'GarageGothic-Bold';
        line-height: 0.88;
        text-transform: uppercase;
    }

    .description {
        padding: 6px 20px 12px;
    }

    .lede {
        font-family: 'Agrandir';
        line-height: 1.1;

        p {
            margin: 0;
        }
    }

    .authors {
        margin-bottom: 6px;

        &.isAboveDescription {
            margin-bottom: 0;
        }
    }

    .sponsors {
        display: inline-block;
        width: 100%;
        margin-top: auto;
        padding: 2px 10px 4px;
        background-color: $color-urbania-background;
        color: $color-urbania-text;
        letter-spacing: 0.04em;
        line-height: 0.7;

        p,
        span {
            line-height: 0.7;
        }
    }

    .sponsor {
        display: inline;
        font-family: 'Agrandir';
        font-size: 9px;
        font-weight: 400;
        line-height: 0.7;
        text-transform: uppercase;
    }

    &.quatre95 {
        background-color: $color-quatre95-background;

        .author {
            color: $color-quatre95-text;
        }

        .sponsors {
            background-color: $color-urbania-background;
            color: $color-urbania-text;
        }
    }

    &.urbania {
        background-color: $color-urbania-background;
        color: $color-urbania-text;

        .author {
            color: $color-urbania-text;
        }

        .sponsors {
            background-color: $color-urbania-text;
            color: $color-urbania-background;
        }
    }

    &.dehors {
        background-color: $color-dehors-background;
        color: $color-dehors-text;

        .author {
            color: $color-dehors-text;
        }
    }

    &.universities {
        background-color: $color-universities-background;
        color: $color-universities-text;

        .overTitle {
            color: $color-urbania-text;
        }
    }
}

.callToAction {
    position: absolute;
    z-index: 10;
    right: 0;
    bottom: 0;
    left: 0;
    padding-bottom: 5px;
    transform: translate3d(0, 0, 0);
    vertical-align: middle;

    .arrow {
        margin-bottom: 5px;
        opacity: 0.95;
    }

    .icon {
        display: inline-block;
        margin-top: -3px;
        margin-right: 3px;
        padding: 1px;
    }
}

.mediaControls {
    padding: 10px 20px 20px;
}

.placeholder {
    display: block;
}

.videoContainer {
    position: absolute;
}

.bottom {
    transition: opacity 0.15s linear;
    opacity: 0;

    &.visible {
        opacity: 1;
    }

    &.withGradient {
        background: linear-gradient(rgba(0, 0, 0, 0), rgba(0, 0, 0, 0.4));
    }
}

.callToActionContainer {
    @extend %fullscreen;
    z-index: 3;
}

.visual {
    height: 100%;
}

.image {
    // don't manage my size!
    position: relative !important;
    width: 100% !important;
    height: 100% !important;

    .isCurrent & {
        animation: slowZoom 15s 1 ease-out forwards;
    }
}

.img {
    position: relative !important;
    top: auto !important;
    left: auto !important;
    width: 100% !important;
    height: 100% !important;
    object-fit: cover;
}

@keyframes slowZoom {
    from {
        transform: scale(1);
    }

    to {
        transform: scale(1.2);
    }
}

